# incident-response-agent

./: .env.example  .gitignore  LICENSE  README.md  SECURITY.md  foundation.prompt  pyproject.toml
.github/workflows/: test.yml
docs/: constitution.md  evidence.md  github-issue-1.md
docs/adr/: 001-initial-scope.md  002-scenario-expansion.md  003-safety-correctness-hardening.md  004-real-disposable-service-recovery.md  005-optional-opentelemetry.md
incident_response_agent/: __init__.py  app.py  audit.py  cli.py  config.py  container_lab.py  executor.py  factory.py  model.py  observability.py  policy.py  sandbox.py  schemas.py  security.py  service.py  storage.py  telemetry.py
scripts/: bootstrap.sh
tests/: conftest.py  test_api.py  test_bootstrap.py  test_concurrency.py  test_container_integration.py  test_container_security.py  test_container_service_lab.py  test_live_integration.py  test_model.py  test_observability.py  test_otel_collector_integration.py  test_persistence_and_failures.py  test_policy.py  test_real_service_integration.py  test_sandbox.py  test_scenario_container_integration.py  test_scenarios.py  test_security.py  test_workflow.py
tests/fixtures/: otel-collector.yaml
