[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "incident-response-agent"
version = "0.1.0"
description = "A bounded, human-approved incident response agent"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
dependencies = [
  "fastapi>=0.115,<1",
  "pydantic>=2.7,<3",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "pytest>=9.0.3,<10",
  "pytest-asyncio>=1.4,<2",
]

[project.scripts]
incident-response = "incident_response_agent.cli:main"

[tool.setuptools.packages.find]
include = ["incident_response_agent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
  "integration: requires a working Docker or Podman engine",
  "live: calls the configured external model and requires network access and credentials",
]
